Fix incorrect rvm path close #3

--- a/patches/etc/supervisor/conf.d/diaspora.conf
+++ b/patches/etc/supervisor/conf.d/diaspora.conf
@@ -1,6 +1,6 @@
 [program:diaspora]
 directory=/home/diaspora/diaspora/
-command=/home/diaspora/.rvm/wrappers/ruby-2.1.5@diaspora/bundle  exec "unicorn_rails -c config/unicorn.rb -E production"
+command=/usr/local/rvm/wrappers/ruby-2.1.5@diaspora/bundle  exec "unicorn_rails -c config/unicorn.rb -E production"
 environment=RAILS_ENV="production"
 user=diaspora
 autostart=true
